# clipforge

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  components.json  index.html  package-lock.json  package.json  vite.config.ts
docs/: README_zh.md
docs/design/: system-architecture.md
docs/research/: ffmpeg-commands-reference.md  tauri-tech-research.md  ui-design-proposal.md
scripts/: bump-version.sh
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  build.rs  ffmpeg-aarch64-apple-darwin  ffprobe-aarch64-apple-darwin  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: audio.rs  compress.rs  convert.rs  download.rs  finder.rs  gif.rs  media_info.rs  merge.rs  mod.rs  resize.rs  settings.rs  subtitle.rs  task.rs  trim.rs  watermark.rs
src-tauri/src/engine/: builder.rs  mod.rs  presets.rs  process.rs  progress.rs  queue.rs
src-tauri/src/models/: media.rs  mod.rs  preset.rs  settings.rs  task.rs
src-tauri/src/utils/: mod.rs  path.rs  text_image.rs  time.rs
src/hooks/: useBatchTask.ts  useDarkMode.ts  useFileDrop.ts  useMediaInfo.ts  useTask.ts  useVideoPlayer.ts
src/i18n/: en.ts  index.ts  types.ts  useI18n.ts  zh.ts
src/lib/: constants.ts  format.ts  output.ts  utils.ts
src/pages/: AudioPage.tsx  CompressPage.tsx  ConvertPage.tsx  DownloadPage.tsx  GifPage.tsx  HomePage.tsx  MergePage.tsx  ResizePage.tsx  SettingsPage.tsx  SubtitlePage.tsx  TrimPage.tsx  WatermarkPage.tsx
src/services/: download.ts  ffmpeg.ts  ffprobe.ts  files.ts  (+1 more)
(+19 files in other folders)
