[package]
name = "clipforge"
version = "0.1.3"
description = "ClipForge - macOS ffmpeg UI 应用"
authors = ["ClipForge Team"]
edition = "2021"

[lib]
name = "clipforge_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Tauri 核心
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-notification = "2"

# 序列化
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# 异步
tokio = { version = "1", features = ["full"] }

# 工具
uuid = { version = "1", features = ["v4"] }
log = "0.4"
env_logger = "0.11"
chrono = "0.4"
tempfile = "3"
once_cell = "1"

# Text rendering (for text watermark — bundled ffmpeg lacks drawtext/libfreetype)
ab_glyph = "0.2"
image = "0.25"
